# InquireDocs

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  asd  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_jn.py
.github/workflows/: pipeline.yml  setup-python-env.yml
api/: config.py  main.py  requirements.txt  settings.py
api/routers/: v1.py
api/routers/v1/: main.py  pdf.py
api/src/: db.py  load.py  query.py  settings.py
app/: __init__.py  main.py
app/api/v1/: routes.py
app/core/: config.py  logging_config.py
app/core/db/: base.py  chroma.py  pgvector.py  postgres_record_manager.py  record_manager.py
app/core/llm/: __init__.py  base.py  ollama.py  openai.py
app/core/summarizer/: __init__.py  base.py  ollama.py  openai.py  summary_types.py
app/db/: chroma.py  database.py
app/llm/: llm.py
app/models/: pdf.py  schema.py
app/schemas/: llm.py  summarizer.py
app/services/: llm.py  retriever.py  summarizer.py
backend/: config.py  load.py  model.py  query.py  requirements.txt  test.py
backend/.db_local/: chroma.sqlite3
helm/InquireDocs/: Chart.yaml  values.yaml
helm/InquireDocs/templates/: _helpers.tpl  deployment.yaml
tests/: test_main.py
tests/core/: __init__.py  test_config.py  test_logging_config.py
tests/core/llm/: test_base.py  test_config.py  test_factory.py  (+2 more)
tests/test_core/: test_config.py  test_logging_config.py
tests/test_services/: test_llm.py  test_retriever.py  test_summarizer.py
utils/: docker-compose.yaml
(+9 files in other folders)
