[project]
name = "inquire-docs"
authors = [
  {name = "Julian Nonino", email = "noninojulian@gmail.com"}
]
maintainers = [
  {name = "Julian Nonino", email = "noninojulian@gmail.com"}
]

[tool.black]
line-length = 80
include = '''
(
    app/.*\.py$
  | tests/.*\.py$
)
'''

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
